Fixed menu items on mobile not being centered

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ nav{
   flex-wrap: wrap;
   box-shadow: 0px 0px 5px 5px #e063107a;
   z-index: 1000;
+  transition-duration: 0.5s;
 }
 nav .logo{
   color: #fff;
@@ -32,6 +33,9 @@ nav ul{
   display: flex;
   flex-wrap: wrap;
   list-style: none;
+}
+nav:hover {
+  box-shadow: 0px 0px 20px 5px #e06310e9;
 }
 nav ul li{
   margin: 0 5px;
@@ -176,7 +180,7 @@ h4 {
 iframe {
   padding: 10px;
 }
-ul {
+#list ul {
   padding-left: 100px;
 }
 
